Fixed Overlap Problem

--- a/src/App.css
+++ b/src/App.css
@@ -77,10 +77,6 @@ h1, h2, h3, h4, h5, h6, p {
 
 /* Header */
 
-#header-container {
-	height: 90vh;
-}
-
 #header-container img {
   width: 220px;
 }
@@ -121,7 +117,6 @@ h1, h2, h3, h4, h5, h6, p {
 /* About */
 
 #about-container {
-	position: relative;
 	background-color: rgb(227,44,64, .7);
 	padding: 40px;
 	border: 1px solid transparent;
